infrastructure/eks/k8s/kuar-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuar-app
  namespace: kandula
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuar-app
  template:
    metadata:
      labels:
        app: kuar-app
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP


---
apiVersion: v1
kind: Service
metadata:
  name: kuar-svc
  namespace: check
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuar-app
