infrastructure/eks/k8s/kandula-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kandula-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kandula.lirondadon.link
    http:
      paths:
      - backend:
          service:
            name: apache-svc
            port:
              number: 80
        path: /app
        pathType: Exact
