infrastructure/eks/k8s/kuar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuar-ingress
  namespace: kandula
spec:
  ingressClassName: nginx
  rules:
  - host: kandula.lirondadon.link
    http:
      paths:
      - backend:
          service:
            name: kuar-svc
            port:
              number: 80
        path: /
        pathType: Prefix
